name: monadloc
version: 0.1
Cabal-Version:  >= 1.2.3
build-type: Simple
license: PublicDomain
author: Pepe Iborra
maintainer: pepeiborra@gmail.com
homepage: http://github.com/pepeiborra/monadloc
synopsis: A class for monads which can keep a stack trace
category: Control, Monads
stability: experimental
description:
  This package defines a class for monads which can keep a stack trace,
  together with the relevant instances for mtl/transformers.
  .
  Additionally, a preprocessor is provided which can insert calls
  to withLoc before every monadic statement in a module.
  .
  To invoke the preprocessor, add the following pragma at the top of a source file:
  .
  > {-# OPTIONS_GHC -F -pgmF MonadLoc #-}
  .
  together with an import for the @Control.Monad.Loc@ module
  .
  This package provides no implementation of the MonadLoc interface.
  Currently the only package that does so is control-monad-exception,
  but any other package can implement the interface and provide monadic call traces.

Flag transformers
   default: False


Library
  buildable: True
  build-depends: base >= 4, syb, pretty, template-haskell

  if flag(transformers)
     build-depends: transformers
     cpp-options: -DTRANSFORMERS
  else
     build-depends: mtl

  ghc-options: -Wall
  extensions:  FlexibleInstances
  exposed-modules:
     Control.Monad.Loc

Executable MonadLoc
   buildable: True
   build-depends: haskell-src-exts
   main-is: MonadLoc.hs
   ghc-options: -Wall -fno-warn-name-shadowing
